started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -1,5 +1,4 @@
 
-# TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
 ControllerCreationWizardTitle="Neues "Controller" Diagramm"
@@ -53,85 +52,82 @@ ShortcutCreationWizard_ReferencedElementSelectionPageEmptyError=Referenziertes E
 ShortcutCreationWizard_ReferencedElementSelectionPageInvalidError=Ungültiges referenziertes Element ist ausgewählt
 ModelElementSelectionPageMessage=Wähle Modell-Element:
 ValidateActionMessage=Validieren
-Processors1Group_title=Prozessoren
-Processors1Group_desc=Prozessor-Elemente
-Processorstates2Group_title=Prozessor-Zustände
-Processorstates2Group_desc=Prozessor-Zustand-Elemente
-Controller3Group_title=Controller
-Controller3Group_desc=Controller-Elemente
-Controllerstates4Group_title=Controller-Zustände
-Controllerstates4Group_desc=Controller-Zustand-Elemente
+Controllers1Group_title=Controller
+Controllers1Group_desc=Controller-Elemente
+Actions2Group_title=Aktionen
+Actions2Group_desc=Aktions-Elements
+ActionHandler3Group_title=Aktions-Handler
+ActionHandler3Group_desc=Aktions-Handler-Elemente
+ActionEvents4Group_title=Aktions-Ereignisse
+ActionEvents4Group_desc=Aktions-Ereignis-Elemente
 Transitions5Group_title=Übergänge
 Transitions5Group_desc=Übergangs-Elemente
 Admin1CreationTool_title=Admin
-Admin1CreationTool_desc=Neuen Prozessor mit Admin-Rolle erstellen
+Admin1CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
 User2CreationTool_title=User
-User2CreationTool_desc=Neuen Prozessor mit Benutzer-Rolle erstellen
-CustomRole3CreationTool_title=Individuelle Rolle
-CustomRole3CreationTool_desc=Neuen Prozessor mit individueller Rolle erstellen
-Account4CreationTool_title=Account
-Account4CreationTool_desc=Neuen Account-Prozessor erstellen
-Ajax5CreationTool_title=Ajax
-Ajax5CreationTool_desc=Neuen Ajax-Prozessor erstellen
-Search6CreationTool_title=Suche
-Search6CreationTool_desc=Neuen Such-Prozessor erstellen
-Custom7CreationTool_title=Individuell
-Custom7CreationTool_desc=Neuen individuellen Prozessor erstellen
+User2CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
+Account3CreationTool_title=Account
+Account3CreationTool_desc=Neuen Account Controller erstellen
+Ajax4CreationTool_title=Ajax
+Ajax4CreationTool_desc=Neuen Ajax Controller erstellen
+Search5CreationTool_title=Suche
+Search5CreationTool_desc=Neuen Such-Controller erstellen
+Customcontroller6CreationTool_title=Individuell
+Customcontroller6CreationTool_desc=Neuen individuellen Controller erstellen
 Main1CreationTool_title=Main
-Main1CreationTool_desc=Neuen Main-Zustand erstellen
+Main1CreationTool_desc=Neue Main Aktion erstellen
 View2CreationTool_title=View
-View2CreationTool_desc=Neuen View-Zustand erstellen
+View2CreationTool_desc=Neue View Aktion erstellen
 Display3CreationTool_title=Display
-Display3CreationTool_desc=Neuen Display-Zustand erstellen
+Display3CreationTool_desc=Neue Display Aktion erstellen
 Edit4CreationTool_title=Edit
-Edit4CreationTool_desc=Neuen Edit-Zustand erstellen
+Edit4CreationTool_desc=Neue Edit Aktion erstellen
 Delete5CreationTool_title=Delete
-Delete5CreationTool_desc=Neuen Delete-Zustand erstellen
+Delete5CreationTool_desc=Neue Delete Aktion erstellen
 Custom6CreationTool_title=Individuell
-Custom6CreationTool_desc=Neuen individuellen Zustand erstellen
+Custom6CreationTool_desc=Neue individuellen Aktion erstellen
 List1CreationTool_title=Liste
-List1CreationTool_desc=Neuen Listen-Controller erstellen
+List1CreationTool_desc=Neuen Listen-Handler erstellen
 Detail2CreationTool_title=Detail
-Detail2CreationTool_desc=Neuen Detail-Controller erstellen
+Detail2CreationTool_desc=Neuen Detail-Handler erstellen
 Edit3CreationTool_title=Edit
-Edit3CreationTool_desc=Neuen Edit-Controller erstellen
+Edit3CreationTool_desc=Neuen Edit-Handler erstellen
 Custom4CreationTool_title=Individuell
-Custom4CreationTool_desc=Neuen individuellen Controller erstellen
+Custom4CreationTool_desc=Neuen individuellen Handler erstellen
 Normal1CreationTool_title=Normal
-Normal1CreationTool_desc=Neuen Zustand erstellen
+Normal1CreationTool_desc=Neues Ereignis erstellen
 Start2CreationTool_title=Start
-Start2CreationTool_desc=Neuen Start-Zustand erstellen
-End3CreationTool_title=End
-End3CreationTool_desc=Neuen End-Zustand erstellen
+Start2CreationTool_desc=Neues Start-Ereignis erstellen
+End3CreationTool_title=Ende
+End3CreationTool_desc=Neues End-Ereignis erstellen
 Redirect1CreationTool_title=Umleitung
 Redirect1CreationTool_desc=Neue Umleitung erstellen
-UserAction2CreationTool_title=Benutzer-Aktion
-UserAction2CreationTool_desc=Neue Benutzer-Aktion erstellen
-ControllerDependency3CreationTool_title=Controller-Abhängigkeit
-ControllerDependency3CreationTool_desc=Controller zu Prozessor-Zustand zuweisen
+UserAction2CreationTool_title=Benutzeraktion
+UserAction2CreationTool_desc=Neue Benutzeraktion erstellen
+ActionHandlerAssignment3CreationTool_title=Aktions-Handler Zuweisung
+ActionHandlerAssignment3CreationTool_desc=Aktions-Handler zu Aktion zuweisen
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert für die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
 DiagramEditorActionBarAdvisor_AboutDialogTitle=Über
-DiagramEditorActionBarAdvisor_AboutDialogMessage=Prozess-Diagramm Editor
+DiagramEditorActionBarAdvisor_AboutDialogMessage=Controller-Diagramm Editor
 
-DiagramEditorWorkbenchWindowAdvisor_Title=Prozess-Anwendung
+DiagramEditorWorkbenchWindowAdvisor_Title=Controller-Anwendung
 WizardNewFileCreationPage_FileLabel=Datei:
 WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
-AdminStatesEditPart_title=AdminProzessor Zustände
-UserStatesEditPart_title=UserProzessor Zustände
-CustomRoleStatesEditPart_title=CustomRoleProzessor Zustände
-AccountStatesEditPart_title=AccountProzessor Zustände
-AjaxStatesEditPart_title=AjaxProzessor Zustände
-SearchStatesEditPart_title=SearchProzessor Zustände
-CustomStatesEditPart_title=CustomProzessor Zustände
-ListCStatesEditPart_title=ListController Zustände
-DetailCStatesEditPart_title=DetailController Zustände
-EditCStatesEditPart_title=EditController Zustände
-CustomCStatesEditPart_title=CustomController Zustände
+AdminActionsEditPart_title=Admin Controller Aktionen
+UserActionsEditPart_title=User Controller Aktionen
+AccountActionsEditPart_title=Account Controller Aktionen
+AjaxActionsEditPart_title=Ajax Controller Aktionen
+SearchActionsEditPart_title=Such-Controller Aktionen
+CustomActionsEditPart_title=Eigener Controller Aktionen
+ListActionEventsEditPart_title=List Aktion Ereignisse
+DetailActionEventsEditPart_title=Detail Aktion Ereignisse
+EditActionEventsEditPart_title=Edit Aktion Ereignisses
+CustomActionEventsEditPart_title=Custom Aktion Ereignisse
 
 CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
