--- a/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
@@ -32,52 +32,25 @@ prefpage.de.guite.modulestudio.gmf.controller.rulersAndGrid=Lineale und Grid
 
 
 # Providers
-metatype.name.ProcessingContainer_1200=Controller
-metatype.name.Processor_2201=AdminProcessor
-metatype.name.Processor_2202=UserProcessor
-metatype.name.Processor_2203=CustomRoleProcessor
-metatype.name.Processor_2204=AccountProcessor
-metatype.name.Processor_2205=AjaxProcessor
-metatype.name.Processor_2206=SearchProcessor
-metatype.name.Processor_2207=CustomProcessor
-metatype.name.Controller_2208=ListController
-metatype.name.Controller_2209=DetailController
-metatype.name.Controller_2210=EditController
-metatype.name.Controller_2211=CustomController
-metatype.name.ProcessorState_3201=MainState
-metatype.name.ProcessorState_3202=ViewState
-metatype.name.ProcessorState_3203=DisplayState
-metatype.name.ProcessorState_3204=EditState
-metatype.name.ProcessorState_3205=DeleteState
-metatype.name.ProcessorState_3206=CustomState
-metatype.name.ControllerState_3207=NormalState
-metatype.name.ControllerState_3208=StartState
-metatype.name.ControllerState_3209=EndState
-metatype.name.Transition_4201=Redirect
-metatype.name.Transition_4202=User Action
-metatype.name.Transition_4203=Controller Dependency
-
-
-metatype.name.AdminProcessor_2201=AdminProcessor
-metatype.name.UserProcessor_2202=UserProcessor
-metatype.name.CustomRoleProcessor_2203=CustomRoleProcessor
-metatype.name.AccountProcessor_2204=AccountProcessor
-metatype.name.AjaxProcessor_2205=AjaxProcessor
-metatype.name.SearchProcessor_2206=SearchProcessor
-metatype.name.CustomProcessor_2207=CustomProcessor
-metatype.name.ListController_2208=ListController
-metatype.name.DetailController_2209=DetailController
-metatype.name.EditController_2210=EditController
-metatype.name.CustomController_2211=CustomController
-metatype.name.MainProcessorState_3201=MainState
-metatype.name.ViewProcessorState_3202=ViewState
-metatype.name.DisplayProcessorState_3203=DisplayState
-metatype.name.EditProcessorState_3204=EditState
-metatype.name.DeleteProcessorState_3205=DeleteState
-metatype.name.CustomProcessorState_3206=CustomState
-metatype.name.NormalControllerState_3207=NormalState
-metatype.name.StartControllerState_3208=StartState
-metatype.name.EndControllerState_3209=EndState
-metatype.name.RedirectTransition_4201=Redirect
-metatype.name.UserActionTransition_4202=User Action
-metatype.name.RedirectTransition_4203=Controller Dependency
+metatype.name.Controllers_1200=Controller
+metatype.name.AdminController_2201=Admin Controller
+metatype.name.UserController_2202=User Controller
+metatype.name.AccountController_2203=Account Controller
+metatype.name.AjaxController_2204=Ajax Controller
+metatype.name.SearchController_2205=Such-Controller
+metatype.name.CustomController_2206=Eigener Controller
+metatype.name.ListHandler_2207=List Aktions-Handler
+metatype.name.DetailHandler_2208=Detail Aktions-Handler
+metatype.name.EditHandler_2209=Edit Aktions-Handler
+metatype.name.CustomHandler_2210=Eigener Aktions-Handler
+metatype.name.MainAction_3201=Main Aktion
+metatype.name.ViewAction_3202=View Aktion
+metatype.name.DisplayAction_3203=Display Aktion
+metatype.name.EditAction_3204=Edit Aktion
+metatype.name.DeleteAction_3205=Delete Aktion
+metatype.name.CustomAction_3206=Eigene Aktion
+metatype.name.NormalEvent_3207=Normales Ereignis
+metatype.name.StartEvent_3208=Start-Ereignis
+metatype.name.EndEvent_3209=End-Ereignis
+metatype.name.Redirect_4201=Umleitung
+metatype.name.UserTransition_4202=Benutzeraktion
