started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -1,5 +1,4 @@
 
-# TODO: manually put keys and values
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
 ModelCreationWizardTitle="Neues "Model" Diagramm"
@@ -55,77 +54,93 @@ ModelElementSelectionPageMessage=Wähle Modell-Element:
 ValidateActionMessage=Validieren
 Maintools1Group_title=Basis-Werkzeuge
 Maintools1Group_desc=Grundlegende Persistenz-Elemente
-Columntypes2Group_title=Spalten-Arten
-Columntypes2Group_desc=Tabellenspalten-Elemente
-ModVarTypes3Group_title=ModVar-Typen
-ModVarTypes3Group_desc=Modulevariablen-Elemente
+Fieldtypes2Group_title=Feld-Typen
+Fieldtypes2Group_desc=Entitäts-Feld-Elemente
+VarTypes3Group_title=Var-Typen
+VarTypes3Group_desc=Variablen-Elemente
 Links4Group_title=Links
 Links4Group_desc=Beziehungs-Elemente
-Table1CreationTool_title=Tabelle
-Table1CreationTool_desc=Neue Daten-Tabelle erstellen
-TableIndex2CreationTool_title=Tabellen-Index
-TableIndex2CreationTool_desc=Neuen Tabellen-Index erstellen
-TableIndexItem3CreationTool_title=Tabellen-Index-Eintrag
-TableIndexItem3CreationTool_desc=Neuen Index-Eintrag erstellen
-ModVars4CreationTool_title=ModVars
-ModVars4CreationTool_desc=Neuen Container für Modulvariablen erstellen
-Integer1CreationTool_title=Integer
-Integer1CreationTool_desc=Ein Integer-Feld
-String2CreationTool_title=String
-String2CreationTool_desc=Ein String-Feld
-Boolean3CreationTool_title=Boolean
-Boolean3CreationTool_desc=Ein Boolean-Feld
-Date4CreationTool_title=Datum
-Date4CreationTool_desc=Ein Date-Feld
-Timestamp5CreationTool_title=Zeitstempel
-Timestamp5CreationTool_desc=Ein Timestamp-Feld
-Decimal6CreationTool_title=Dezimalzahl
-Decimal6CreationTool_desc=Ein Decimal-Feld
-Float7CreationTool_title=Fließkommazahl
-Float7CreationTool_desc=Ein Float-Feld
-Text8CreationTool_title=Text
-Text8CreationTool_desc=Ein Text-Feld
-TextL9CreationTool_title=Text L
-TextL9CreationTool_desc=Ein großes Text-Feld
-TextMB10CreationTool_title=Text MB
-TextMB10CreationTool_desc=Ein Multibyte Text-Feld
-TextLMB11CreationTool_title=Text L MB
-TextLMB11CreationTool_desc=Ein großes Multibyte Text-Feld
-Blob12CreationTool_title=Blob
-Blob12CreationTool_desc=Ein binäres Feld
-Text1CreationTool_title=Text
-Text1CreationTool_desc=Ein simples String-Feld
+Entity1CreationTool_title=Entität
+Entity1CreationTool_desc=Neue Daten-Entität erstellen
+EntityIndex2CreationTool_title=Entitäts-Index
+EntityIndex2CreationTool_desc=Neuen Entitäts-Index erstellen
+EntityIndexItem3CreationTool_title=Index-Eintrag
+EntityIndexItem3CreationTool_desc=Neuen Index-Eintrag erstellen
+Variables4CreationTool_title=Variablen
+Variables4CreationTool_desc=Neuen Container für Variablen erstellen
+Boolean1CreationTool_title=Boolean
+Boolean1CreationTool_desc=Ein Boolean-Feld
 Integer2CreationTool_title=Integer
 Integer2CreationTool_desc=Ein Integer-Feld
-Bool3CreationTool_title=Bool
-Bool3CreationTool_desc=Ein Boolean-Feld
-FilePath4CreationTool_title=Dateipfad
-FilePath4CreationTool_desc=Ein Verzeichnispfad-Feld
-List5CreationTool_title=Liste
-List5CreationTool_desc=Eine Liste von Werten
-ListItem6CreationTool_title=Listen-Eintrag
-ListItem6CreationTool_desc=Ein Listen-Eintrag
-OneToOneRelationship1CreationTool_title=Eins-Zu-Eins Beziehung
-OneToOneRelationship1CreationTool_desc=Einzelne Referenzen zuweisen
-OneToManyRelationship2CreationTool_title=Eins-Zu-Viele Beziehung
-OneToManyRelationship2CreationTool_desc=Mehrfache Referenzen zuweisen
+Float3CreationTool_title=Fließkommazahl
+Float3CreationTool_desc=Eine Float-Feld 
+Decimal4CreationTool_title=Dezimalzahl
+Decimal4CreationTool_desc=Ein Decimal-Feld
+String5CreationTool_title=String
+String5CreationTool_desc=Ein String-Feld
+Email6CreationTool_title=E-Mail
+Email6CreationTool_desc=Ein E-Mail-Feld
+Url7CreationTool_title=URL
+Url7CreationTool_desc=Ein URL-Feld
+Upload8CreationTool_title=Upload
+Upload8CreationTool_desc=Ein Upload-Feld
+User9CreationTool_title=User
+User9CreationTool_desc=Ein Benutzer-Feld
+Array10CreationTool_title=Array
+Array10CreationTool_desc=Ein Array-Feld
+Enum11CreationTool_title=Enum
+Enum11CreationTool_desc=Ein Enumeration-Feld
+Object12CreationTool_title=Objekt
+Object12CreationTool_desc=Ein Objekt-Feld
+Blob13CreationTool_title=Blob
+Blob13CreationTool_desc=Ein binäres Feld
+Clob14CreationTool_title=Clob
+Clob14CreationTool_desc=Ein großes Text-Feld
+Timestamp15CreationTool_title=Zeitstempel
+Timestamp15CreationTool_desc=Ein Timestamp-Feld
+Date16CreationTool_title=Datum
+Date16CreationTool_desc=Ein Date-Feld
+Time17CreationTool_title=Zeit
+Time17CreationTool_desc=Ein Time-Feld
+Gzip18CreationTool_title=Gzip
+Gzip18CreationTool_desc=Ein Gzip-Feld
+BoolVar1CreationTool_title=Bool Var
+BoolVar1CreationTool_desc=Ein Boolean-Feld
+IntegerVar2CreationTool_title=Int Var
+IntegerVar2CreationTool_desc=Ein Integer-Feld
+TextVar3CreationTool_title=Text Var
+TextVar3CreationTool_desc=Ein simples String-Feld
+FilePathVar4CreationTool_title=Dateipfad Var
+FilePathVar4CreationTool_desc=Ein Verzeichnispfad-Feld
+ListVar5CreationTool_title=Liste Var
+ListVar5CreationTool_desc=Eine Liste von Werten
+ListVarItem6CreationTool_title=Listen-Eintrag
+ListVarItem6CreationTool_desc=Ein Listen-Eintrag
+OneToOneRelationship1CreationTool_title=Eins-Zu-Eins-Beziehung
+OneToOneRelationship1CreationTool_desc=Eine Entität einer anderen zuweisen
+OneToManyRelationship2CreationTool_title=Eins-Zu-Viele-Beziehung
+OneToManyRelationship2CreationTool_desc=Eine Entität mehreren anderen zuweisen
+ManyToManyRelationship3CreationTool_title=Viele-Zu-Viele-Beziehung
+ManyToManyRelationship3CreationTool_desc=Mehrere Entitäten mehreren anderen zuweisen
+InheritanceRelationship4CreationTool_title=Vererbungs-Beziehung
+InheritanceRelationship4CreationTool_desc=Eine Entität von einer anderen erben lassen
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert für die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
 DiagramEditorActionBarAdvisor_AboutDialogTitle=Über
-DiagramEditorActionBarAdvisor_AboutDialogMessage=Persistenz-Diagramm Editor
+DiagramEditorActionBarAdvisor_AboutDialogMessage=Model-Diagramm Editor
 
-DiagramEditorWorkbenchWindowAdvisor_Title=Persistenz-Anwendung
+DiagramEditorWorkbenchWindowAdvisor_Title=Model-Anwendung
 WizardNewFileCreationPage_FileLabel=Datei:
 WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
-ColumnsEditPart_title=Tabellen  Spalten
-TableIndexesEditPart_title=Tabellen  Indexe
-IndexItemsEditPart_title=Tabellen-Index  Einträge
-ModuleVariablesEditPart_title=Mod Var Container  ModVars
-ListItemsEditPart_title=Module Var Liste  Einträge
+ColumnsEditPart_title=Entität  Felder
+TableIndexesEditPart_title=Entität  Indexe
+IndexItemsEditPart_title=Entitäts-Index  Einträge
+ModuleVariablesEditPart_title=Variablen  Vars
+ListItemsEditPart_title=Liste Var  Einträge
 
 CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
