--- a/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
@@ -32,32 +32,36 @@ prefpage.de.guite.modulestudio.gmf.model.rulersAndGrid=Lineale und Grid
 
 
 # Providers
-metatype.name.ModelContainer_1100=Model
-metatype.name.Table_2101=Table
-metatype.name.ModVarContainer_2102=ModVars
-metatype.name.IntegerField_3101=Integer
-metatype.name.StringField_3102=String
-metatype.name.BooleanField_3103=Boolean
-metatype.name.DateField_3104=Date
-metatype.name.TimestampField_3105=Timestamp
-metatype.name.DecimalField_3106=Decimal
-metatype.name.FloatField_3107=Float
-metatype.name.TextField_3108=Text
-metatype.name.TextField_3109=TextLarge
-metatype.name.TextField_3110=TextMultiByte
-metatype.name.TextField_3111=TextLargeMultiByte
-metatype.name.BlobField_3112=Blob
-metatype.name.TableIndex_3113=Table Index
-metatype.name.TableIndexItem_3114=Index Item
-metatype.name.ModuleVarText_3115=TextVar
-metatype.name.ModuleVarInt_3116=IntVar
-metatype.name.ModuleVarBool_3117=BoolVar
-metatype.name.ModuleVarFilePath_3118=FilePath
-metatype.name.ModuleVarList_3119=ListVar
-metatype.name.ModuleVarListItem_3120=ListItem
-metatype.name.Relationship_4101=OneToOne Relationship
-metatype.name.Relationship_4102=OneToMany Relationship
-
-
-metatype.name.OneToOneRelationship_4101=OneToOne Relationship
-metatype.name.OneToManyRelationship_4102=OneToMany Relationship
+metatype.name.Models_1100=Models
+metatype.name.Entity_2101=Entität
+metatype.name.Variables_2102=Variablen
+metatype.name.BooleanField_3101=Boolean
+metatype.name.IntegerField_3102=Integer
+metatype.name.FloatField_3103=Float
+metatype.name.DecimalField_3104=Decimal
+metatype.name.StringField_3105=String
+metatype.name.EmailField_3106=E-Mail
+metatype.name.UrlField_3107=URL
+metatype.name.UploadField_3108=Upload
+metatype.name.UserField_3109=User
+metatype.name.ArrayField_3110=Array
+metatype.name.EnumField_3111=Enum
+metatype.name.ObjectField_3112=Objekt
+metatype.name.BlobField_3113=Blob
+metatype.name.ClobField_3114=Clob
+metatype.name.TimestampField_3115=Zeitstempel
+metatype.name.DateField_3116=Datum
+metatype.name.TimeField_3117=Zeit
+metatype.name.GzipField_3118=Gzip
+metatype.name.EntityIndex_3119=Entitäts-Index
+metatype.name.EntityIndexItem_3120=Index-Eintrag
+metatype.name.BoolVar_3121=Bool Var
+metatype.name.IntVar_3122=Int Var
+metatype.name.TextVar_3123=Text Var
+metatype.name.FilePathVar_3124=Dateipfad Var
+metatype.name.ListVar_3125=Liste Var
+metatype.name.ListVarItem_3126=Liste Var Eintrag
+metatype.name.OneToOneRelationship_4101=Eins-Zu-Eins-Beziehung
+metatype.name.OneToManyRelationship_4102=Eins-Zu-Viele-Beziehung
+metatype.name.ManyToManyRelationship_4103=Viele-Zu-Viele-Beziehung
+metatype.name.InheritanceRelationship_4104=Vererbungs-Beziehung
