started huge refactoring of DSL

--- a/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -84,16 +84,16 @@ Edit4CreationTool_title=Edit
 Edit4CreationTool_desc=Neue Edit Aktion erstellen
 Delete5CreationTool_title=Delete
 Delete5CreationTool_desc=Neue Delete Aktion erstellen
-Custom6CreationTool_title=Individuell
-Custom6CreationTool_desc=Neue individuellen Aktion erstellen
+Customaction6CreationTool_title=Individuelle Aktion
+Customaction6CreationTool_desc=Neue individuelle Aktion erstellen
 List1CreationTool_title=Liste
 List1CreationTool_desc=Neuen Listen-Handler erstellen
 Detail2CreationTool_title=Detail
 Detail2CreationTool_desc=Neuen Detail-Handler erstellen
 Edit3CreationTool_title=Edit
 Edit3CreationTool_desc=Neuen Edit-Handler erstellen
-Custom4CreationTool_title=Individuell
-Custom4CreationTool_desc=Neuen individuellen Handler erstellen
+Customhandler4CreationTool_title=Individueller Handler
+Customhandler4CreationTool_desc=Neuen individuellen Handler erstellen
 Normal1CreationTool_title=Normal
 Normal1CreationTool_desc=Neues Ereignis erstellen
 Start2CreationTool_title=Start
