started huge refactoring of DSL

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -157,7 +157,7 @@ _UI_Application_interactiveInstallation_feature = Interaktive Installation
 _UI_Application_modelPath_feature = Modell-Pfad
 _UI_Application_models_feature = Models
 _UI_Application_controllers_feature = Controller
-_UI_Application_otherModules_feature = Andere Module
+_UI_Application_referredApplications_feature = Referenzierte Anwendungen
 _UI_Application_views_feature = Views
 _UI_Application_applicationType_feature = Anwendungsart
 _UI_Models_isDefaultDataSource_feature = Ist Standard-Datenquelle
