--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -237,7 +237,7 @@ _UI_IntegerField_unsigned_feature = Vorzeichenlos
 _UI_DecimalField_scale_feature = Skalierung
 _UI_AbstractStringField_fixed_feature = Fixe Länge
 _UI_AbstractStringField_nospace_feature = Kein Space
-_UI_AbstractStringField_minLength_feature = Min Length
+_UI_AbstractStringField_minLength_feature = Min Länge
 _UI_StringField_country_feature = Land
 _UI_StringField_ipaddress_feature = IP-Adresse
 _UI_StringField_htmlcolor_feature = HTML-Farbe
