changed length default values for String (255), Float (8) and Decimal (10), fixed #146

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -369,3 +369,13 @@ _UI_LayoutOrderLengthType_MILLIMETER_literal = MILLIMETER
 _UI_LayoutOrderLengthType_INCH_literal = INCH
 _UI_LayoutOrderLengthType_POINTS_literal = POINTS
 _UI_LayoutOrderLengthType_PICAS_literal = PICAS
+_UI_Transition_target_feature = Ziel
+_UI_Transition_source_feature = Quelle
+_UI_Action_incoming_feature = Eingehend
+_UI_Action_outgoing_feature = Ausgehend
+_UI_Application_referredApplication_feature = Referenzierte Anwendung
+_UI_AbstractIntegerField_length_feature = Länge
+_UI_FloatField_length_feature = Länge
+_UI_DecimalField_length_feature = Länge
+_UI_AbstractStringField_length_feature = Länge
+_UI_ArrayField_length_feature = Länge
