--- a/de.guite.modulestudio.locales.feature/feature_de.properties
+++ b/de.guite.modulestudio.locales.feature/feature_de.properties
@@ -10,7 +10,7 @@ descriptionUrl=description_de.html
 description=Internationalisierung in verschiedenen Sprachen.
 
 copyrightUrl=copyright_de.html
-copyright = Copyright (c) 2007-2010 Guckelsberger Informationstechnik
+copyright = Copyright (c) 2007-2010 Axel Guckelsberger
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
