readded text fields

--- a/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -78,32 +78,34 @@ Decimal4CreationTool_title=Dezimalzahl
 Decimal4CreationTool_desc=Ein Decimal-Feld
 String5CreationTool_title=String
 String5CreationTool_desc=Ein String-Feld
-Email6CreationTool_title=E-Mail
-Email6CreationTool_desc=Ein E-Mail-Feld
-Url7CreationTool_title=URL
-Url7CreationTool_desc=Ein URL-Feld
-Upload8CreationTool_title=Upload
-Upload8CreationTool_desc=Ein Upload-Feld
-User9CreationTool_title=User
-User9CreationTool_desc=Ein Benutzer-Feld
-Array10CreationTool_title=Array
-Array10CreationTool_desc=Ein Array-Feld
-Enum11CreationTool_title=Enum
-Enum11CreationTool_desc=Ein Enumeration-Feld
-Object12CreationTool_title=Objekt
-Object12CreationTool_desc=Ein Objekt-Feld
-Blob13CreationTool_title=Blob
-Blob13CreationTool_desc=Ein bin‰res Feld
-Clob14CreationTool_title=Clob
-Clob14CreationTool_desc=Ein groﬂes Text-Feld
-Timestamp15CreationTool_title=Zeitstempel
-Timestamp15CreationTool_desc=Ein Timestamp-Feld
-Date16CreationTool_title=Datum
-Date16CreationTool_desc=Ein Date-Feld
-Time17CreationTool_title=Zeit
-Time17CreationTool_desc=Ein Time-Feld
-Gzip18CreationTool_title=Gzip
-Gzip18CreationTool_desc=Ein Gzip-Feld
+Text6CreationTool_title=Text
+Text6CreationTool_desc=Ein Text-Feld
+Email7CreationTool_title=E-Mail
+Email7CreationTool_desc=Ein E-Mail-Feld
+Url8CreationTool_title=URL
+Url8CreationTool_desc=Ein URL-Feld
+Upload9CreationTool_title=Upload
+Upload9CreationTool_desc=Ein Upload-Feld
+User10CreationTool_title=User
+User10CreationTool_desc=Ein Benutzer-Feld
+Array11CreationTool_title=Array
+Array11CreationTool_desc=Ein Array-Feld
+Enum12CreationTool_title=Enum
+Enum12CreationTool_desc=Ein Enumeration-Feld
+Object13CreationTool_title=Objekt
+Object13CreationTool_desc=Ein Objekt-Feld
+Blob14CreationTool_title=Blob
+Blob14CreationTool_desc=Ein bin‰res Feld
+Clob15CreationTool_title=Clob
+Clob15CreationTool_desc=Ein groﬂes Text-Feld
+Timestamp16CreationTool_title=Zeitstempel
+Timestamp16CreationTool_desc=Ein Timestamp-Feld
+Date17CreationTool_title=Datum
+Date17CreationTool_desc=Ein Date-Feld
+Time18CreationTool_title=Zeit
+Time18CreationTool_desc=Ein Time-Feld
+Gzip19CreationTool_title=Gzip
+Gzip19CreationTool_desc=Ein Gzip-Feld
 BoolVar1CreationTool_title=Bool Var
 BoolVar1CreationTool_desc=Ein Boolean-Feld
 IntegerVar2CreationTool_title=Int Var
