--- a/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
@@ -40,27 +40,28 @@ metatype.name.IntegerField_3102=Integer
 metatype.name.FloatField_3103=Float
 metatype.name.DecimalField_3104=Decimal
 metatype.name.StringField_3105=String
-metatype.name.EmailField_3106=E-Mail
-metatype.name.UrlField_3107=URL
-metatype.name.UploadField_3108=Upload
-metatype.name.UserField_3109=User
-metatype.name.ArrayField_3110=Array
-metatype.name.EnumField_3111=Enum
-metatype.name.ObjectField_3112=Objekt
-metatype.name.BlobField_3113=Blob
-metatype.name.ClobField_3114=Clob
-metatype.name.TimestampField_3115=Zeitstempel
-metatype.name.DateField_3116=Datum
-metatype.name.TimeField_3117=Zeit
-metatype.name.GzipField_3118=Gzip
-metatype.name.EntityIndex_3119=Entitäts-Index
-metatype.name.EntityIndexItem_3120=Index-Eintrag
-metatype.name.BoolVar_3121=Bool Var
-metatype.name.IntVar_3122=Int Var
-metatype.name.TextVar_3123=Text Var
-metatype.name.FilePathVar_3124=Dateipfad Var
-metatype.name.ListVar_3125=Liste Var
-metatype.name.ListVarItem_3126=Liste Var Eintrag
+metatype.name.TextField_3106=Text
+metatype.name.EmailField_3107=E-Mail
+metatype.name.UrlField_3108=URL
+metatype.name.UploadField_3109=Upload
+metatype.name.UserField_3110=User
+metatype.name.ArrayField_3111=Array
+metatype.name.EnumField_3112=Enum
+metatype.name.ObjectField_3113=Objekt
+metatype.name.BlobField_3114=Blob
+metatype.name.ClobField_3115=Clob
+metatype.name.TimestampField_3116=Zeitstempel
+metatype.name.DateField_3117=Datum
+metatype.name.TimeField_3118=Zeit
+metatype.name.GzipField_3119=Gzip
+metatype.name.EntityIndex_3120=Entitäts-Index
+metatype.name.EntityIndexItem_3121=Index-Eintrag
+metatype.name.BoolVar_3122=Bool Var
+metatype.name.IntVar_3123=Int Var
+metatype.name.TextVar_3124=Text Var
+metatype.name.FilePathVar_3125=Dateipfad Var
+metatype.name.ListVar_3126=Liste Var
+metatype.name.ListVarItem_3127=Liste Var Eintrag
 metatype.name.OneToOneRelationship_4101=Eins-Zu-Eins-Beziehung
 metatype.name.OneToManyRelationship_4102=Eins-Zu-Viele-Beziehung
 metatype.name.ManyToManyRelationship_4103=Viele-Zu-Viele-Beziehung
