--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -379,3 +379,4 @@ _UI_FloatField_length_feature = Länge
 _UI_DecimalField_length_feature = Länge
 _UI_AbstractStringField_length_feature = Länge
 _UI_ArrayField_length_feature = Länge
+_UI_InheritanceRelationship_columnAggregationField_feature = Column Aggregation Feld
