overhauled handling of relations, this fixes many problems and gives more freedom in defining join relationships

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -32,19 +32,20 @@ _UI_FloatField_type = Float-Feld
 _UI_DecimalField_type = Dezimal-Feld
 _UI_AbstractStringField_type = Abstract String Field
 _UI_StringField_type = String-Feld
+_UI_TextField_type = Text Field
+_UI_UserField_type = Benutzer-Feld
+_UI_EmailField_type = E-Mail-Feld
+_UI_UrlField_type = URL-Feld
+_UI_UploadField_type = Upload-Feld
 _UI_ArrayField_type = Array-Feld
+_UI_EnumField_type = Enum-Feld
 _UI_ObjectField_type = Objekt-Feld
 _UI_BlobField_type = Blob-Feld
 _UI_ClobField_type = Clob-Feld
 _UI_TimestampField_type = Zeitstempel-Feld
 _UI_DateField_type = Datums-Feld
 _UI_TimeField_type = Zeit-Feld
-_UI_EnumField_type = Enum-Feld
 _UI_GzipField_type = Gzip-Feld
-_UI_UserField_type = Benutzer-Feld
-_UI_EmailField_type = E-Mail-Feld
-_UI_UrlField_type = URL-Feld
-_UI_UploadField_type = Upload-Feld
 _UI_EntityIndex_type = Entitäts-Index
 _UI_EntityIndexItem_type = Index-Eintrag
 _UI_Relationship_type = Beziehung
@@ -157,6 +158,7 @@ _UI_Application_interactiveInstallation_feature = Interaktive Installation
 _UI_Application_modelPath_feature = Modell-Pfad
 _UI_Application_models_feature = Models
 _UI_Application_controllers_feature = Controller
+_UI_Application_referredApplication_feature = Referenzierte Anwendung
 _UI_Application_referredApplications_feature = Referenzierte Anwendungen
 _UI_Application_views_feature = Views
 _UI_Application_applicationType_feature = Anwendungsart
@@ -212,12 +214,11 @@ _UI_Entity_searchableFields_feature = Durchsuchbar Felder
 _UI_Entity_searchableBatchUpdates_feature = Durchsuchbar Batch Updates
 _UI_Entity_geographical_feature = Geographisch
 _UI_Entity_softDelete_feature = Soft Delete
-_UI_Entity_zikulaStandardFields_feature = Zikula Standard Fields
-_UI_Entity_usesStandardFields_feature = Benutzt Standard-Felder
-_UI_Entity_hasCategorization_feature = Hat Kategorisierung
-_UI_Entity_hasAttribution_feature = Hat Attributierung
-_UI_Entity_hasMetaData_feature = Hat Meta-Daten
-_UI_Entity_hasLogging_feature = Hat Logging
+_UI_Entity_standardFields_feature = Standard-Felder
+_UI_Entity_categorisable_feature = Kategorien
+_UI_Entity_attributable_feature = Attribute
+_UI_Entity_metaData_feature = Meta-Daten
+_UI_Entity_loggable_feature = Logging
 _UI_EntityField_entity_feature = Entität
 _UI_DerivedField_alias_feature = Alias
 _UI_DerivedField_defaultValue_feature = Standardwert
@@ -229,19 +230,24 @@ _UI_DerivedField_readonly_feature = Nur lesen
 _UI_DerivedField_unique_feature = Eindeutig
 _UI_CalculatedField_operands_feature = Operanden
 _UI_LengthField_length_feature = Länge
+_UI_AbstractIntegerField_length_feature = Länge
 _UI_IntegerField_minValue_feature = Min Wert
 _UI_IntegerField_maxValue_feature = Max Wert
 _UI_IntegerField_creditCard_feature = Kreditkarte
 _UI_IntegerField_unsigned_feature = Vorzeichenlos
+_UI_FloatField_length_feature = Länge
+_UI_DecimalField_length_feature = Länge
 _UI_DecimalField_scale_feature = Skalierung
+_UI_AbstractStringField_length_feature = Länge
+_UI_AbstractStringField_regexp_feature = Regulärer Ausdruck
 _UI_AbstractStringField_fixed_feature = Fixe Länge
 _UI_AbstractStringField_nospace_feature = Kein Space
 _UI_AbstractStringField_minLength_feature = Min Länge
 _UI_StringField_country_feature = Land
 _UI_StringField_ipaddress_feature = IP-Adresse
 _UI_StringField_htmlcolor_feature = HTML-Farbe
-_UI_StringField_regexp_feature = Regulärer Ausdruck
 _UI_StringField_usstate_feature = US-Staat
+_UI_ArrayField_length_feature = Länge
 _UI_TimestampField_past_feature = Vergangenheit
 _UI_TimestampField_future_feature = Zukunft
 _UI_EntityIndex_items_feature = Einträge
@@ -251,16 +257,23 @@ _UI_EntityIndex_primary_feature = Primär
 _UI_EntityIndex_type_feature = Typ
 _UI_EntityIndex_entity_feature = Entität
 _UI_EntityIndexItem_index_feature = Index
+_UI_EntityIndexItem_sorting_feature = Sortierung
+_UI_EntityIndexItem_length_feature = Länge
 _UI_Relationship_target_feature = Ziel
 _UI_Relationship_source_feature = Quelle
 _UI_Relationship_container_feature = Container
-_UI_JoinRelationship_alias_feature = Alias
 _UI_JoinRelationship_joinType_feature = Join-Art
-_UI_JoinRelationship_cascadeType_feature = Kaskaden-Art
+_UI_JoinRelationship_sourceAlias_feature = Quelle Alias
+_UI_JoinRelationship_targetAlias_feature = Ziel Alias
+_UI_JoinRelationship_sourceField_feature = Quelle Feld
+_UI_JoinRelationship_targetField_feature = Ziel Feld
+_UI_JoinRelationship_cascadeTypeUpdate_feature = Kaskaden-Art Update
+_UI_JoinRelationship_cascadeTypeDelete_feature = Kaskaden-Art Delete
 _UI_JoinRelationship_inheritKey_feature = Key vererben
 _UI_JoinRelationship_foreignKeyName_feature = Name Fremdschlüssel
 _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
 _UI_InheritanceRelationship_strategy_feature = Strategie
+_UI_InheritanceRelationship_columnAggregationField_feature = Column Aggregation Feld
 _UI_Variables_vars_feature = Variablen
 _UI_Variables_container_feature = Container
 _UI_Variable_name_feature = Name
@@ -276,14 +289,14 @@ _UI_ListVarItem_isDefault_feature = Standard
 _UI_TransformObject_container_feature = Container
 _UI_EntityEventListener_operations_feature = Operationen
 _UI_Transition_condition_feature = Bedingung
-_UI_Transition_incoming_feature = Eingehend
-_UI_Transition_outgoing_feature = Ausgehend
+_UI_Transition_target_feature = Ziel
+_UI_Transition_source_feature = Quelle
 _UI_Transition_container_feature = Container
 _UI_Transition_sourceEvent_feature = Quell-Ereignis
 _UI_Action_controller_feature = Controller
 _UI_Action_handler_feature = Handler
-_UI_Action_target_feature = Ziel
-_UI_Action_source_feature = Quelle
+_UI_Action_incoming_feature = Eingehend
+_UI_Action_outgoing_feature = Ausgehend
 _UI_Controller_actions_feature = Aktionen
 _UI_Controller_container_feature = Container
 _UI_Controller_handlers_feature = Handler
@@ -368,14 +381,3 @@ _UI_LayoutOrderLengthType_MILLIMETER_literal = MILLIMETER
 _UI_LayoutOrderLengthType_INCH_literal = INCH
 _UI_LayoutOrderLengthType_POINTS_literal = POINTS
 _UI_LayoutOrderLengthType_PICAS_literal = PICAS
-_UI_Transition_target_feature = Ziel
-_UI_Transition_source_feature = Quelle
-_UI_Action_incoming_feature = Eingehend
-_UI_Action_outgoing_feature = Ausgehend
-_UI_Application_referredApplication_feature = Referenzierte Anwendung
-_UI_AbstractIntegerField_length_feature = Länge
-_UI_FloatField_length_feature = Länge
-_UI_DecimalField_length_feature = Länge
-_UI_AbstractStringField_length_feature = Länge
-_UI_ArrayField_length_feature = Länge
-_UI_InheritanceRelationship_columnAggregationField_feature = Column Aggregation Feld
