upgraded parsers and removed minor issues

--- a/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -133,5 +133,6 @@ CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
 AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konvertiert werden
 AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
+MessageFormatParser_InvalidInputError=Ungültige Eingabe bei {0}
 ControllerModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
 ControllerModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
