--- a/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -88,5 +88,7 @@ CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
 AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konvertiert werden
 AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
+
+MessageFormatParser_InvalidInputError=Ungültige Eingabe bei {0}
 ModulestudioModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
 ModulestudioModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
