--- a/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -148,7 +148,6 @@ CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
 AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konvertiert werden
 AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
-
-MessageFormatParser_InvalidInputError=Invalid input at {0}
+MessageFormatParser_InvalidInputError=Ungültige Eingabe bei {0}
 ModelModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
 ModelModelingAssistantProviderMessage=Verfügbare Domänen-Modell-Elemente:
